[package]
name = "theseus"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
blake3 = "1.5.5"
bulletproofs = "5.0.0"
curve25519-dalek = "4.1.3"
dashmap = "6.1.0"
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
merlin = "3.0.0"
miette = { version = "7.4.0", features = ["fancy"] }
rand = "0.8.5"
redb = "2.3.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
time = { version = "0.3.37", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.14.0"
